aplicacao/db.yaml
#Define um Deployment para uma instância do MySQL, usando a imagem do MySQL 5.6.
#Configuração para criar um banco de dados usermgmt usando o script definido no ConfigMap.
#Usa uma estratégia de recreação.

#04-mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.6
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: usermanagement-dbcreation-script
              mountPath: /docker-entrypoint-initdb.d #https://hub.docker.com/_/mysql Refer Initializing a fresh instance                                     
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: ebs-pv-claim
        - name: usermanagement-dbcreation-script
          configMap:
            name: usermanagement-dbcreation-script
---
